--- a/components/NavBar.css
+++ b/components/NavBar.css
@@ -55,14 +55,14 @@
   padding: 5px;
   border-radius: 5px;
   border: none;
-  background-color: rgba(222, 217, 208, 0.315);
-  transition: background-color 0.5s ease-out;
+  background-color: rgba(222, 217, 208, 0.63);
+  transition: 0.5s ease-out;
 }
 
 .UserLogOutContainer button:hover {
   cursor: pointer;
-  background-color: rgba(222, 217, 208, 0.8);
-  transition: background-color 0s;
+  background-color: #f2f4f8;
+  transition: 0s;
 }
 
 
