--- a/components/StepVisualizer.css
+++ b/components/StepVisualizer.css
@@ -30,7 +30,7 @@
 }
 
 .StepVisualizer-character {
-  z-index: 1;
+  z-index: 0;
   position: absolute;
   top: 44%;
   transform: translate(-50%, -50%);
@@ -39,7 +39,7 @@
 }
 
 .AddProgressDiv {
-  z-index: 2;
+  z-index: 1;
 }
 
 /* Arranged in order of z-index */
